bugfix: hub: post create dialog: fix text overflow

--- a/projects/charon/src/app/hub/components/hub-create-post-dialog/hub-create-post-dialog.component.scss
+++ b/projects/charon/src/app/hub/components/hub-create-post-dialog/hub-create-post-dialog.component.scss
@@ -59,6 +59,7 @@ $hub-create-post-dialog--submit-button--color: #FFFFFF;
 
 .hub-create-post-dialog__text-form-field {
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .hub-create-post-dialog__editor {
